# hie-readr

./: .gitignore  ChangeLog.md  Makefile  README.md  hie-readr.cabal  hie.yaml  stack.yaml
.github/workflows/: haskell-ci.yml
app/: Main.hs
doc/: HieFile.dot
hie-decl-deps/: Main.hs
hie-dump/: Main.hs
src/: Cli.hs  DeclDeps.hs  Dump.hs  Dumper.hs  Hie.hs  HieDump.hs
