cabal-version:      3.0
name:               hie-readr
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2020 Jan Hrček
maintainer:         example@example.com
author:             Jan Hrček
homepage:           https://github.com/jhrcek/hie-readr#readme
bug-reports:        https://github.com/jhrcek/hie-readr/issues
synopsis:           A tool to dump information contained in .hie files
description:
    Please see the README on GitHub at <https://github.com/jhrcek/hie-readr#readme>

category:           Development
build-type:         Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/jhrcek/hie-readr

library
    exposed-modules:  Lib
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base >=4.7 && <5

executable hie-readr-exe
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.7 && <5,
        hie-readr -any

test-suite hie-readr-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.7 && <5,
        hie-readr -any
