cabal-version:      3.0
name:               hie-readr
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2020 Jan Hrček
maintainer:         example@example.com
author:             Jan Hrček
homepage:           https://github.com/jhrcek/hie-readr#readme
bug-reports:        https://github.com/jhrcek/hie-readr/issues
synopsis:           A tool to dump information contained in .hie files
description:
    Please see the README on GitHub at <https://github.com/jhrcek/hie-readr#readme>

category:           Development
build-type:         Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/jhrcek/hie-readr

common common-options
    default-language: Haskell2010
    build-depends:    base >=4.7 && <5
    ghc-options:      -Wall
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wcompat
                      -Widentities
                      -Wredundant-constraints
                      -Wpartial-fields
                      -Wno-unrecognised-pragmas
                      -Wmissing-deriving-strategies
                      -fwrite-ide-info


library
    import:           common-options
    exposed-modules:  DeclDeps,
                      Hie,
                      HieDump
    hs-source-dirs:   src
    build-depends:    containers,
                      directory,
                      filepath,
                      ghc,
                      ghc-paths,
                      text

executable hie-dump
    import:           common-options
    main-is:          Main.hs
    hs-source-dirs:   hie-dump
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    hie-readr

executable hie-decl-deps
    import:           common-options
    main-is:          Main.hs
    hs-source-dirs:   hie-decl-deps
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    hie-readr

test-suite hie-readr-test
    import:           common-options
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    hie-readr
